[package]
name = "pob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.1.10", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.1"
serde = { version = "1.0.157", features = ["rc", "derive"] }
serde_json = "1.0.94"
